<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="@color/white" android:orientation="vertical" >

    <include android:id="@+id/header" layout="@layout/common_header" />
   
    <ScrollView android:layout_width="match_parent" android:layout_height="match_parent" android:scrollbars="none" >
        <LinearLayout android:layout_width="match_parent" android:layout_height="fill_parent" android:orientation="vertical" android:padding="20dp" >
            <TextView android:id="@+id/message_tv" android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:text="@string/empty"/>
            <Button android:id="@+id/one_btn_dialog_btn" android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:text="@string/one_btn_dialog"/>
			<Button android:id="@+id/two_btn_dialog_btn" android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:text="@string/two_btn_dialog"/>
			<Button android:id="@+id/three_btn_dialog_btn" android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:text="@string/three_btn_dialog"/>
			<Button android:id="@+id/input_dialog_btn" android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:text="@string/input_dialog"/>
			<Button android:id="@+id/radios_dialog_btn" android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:text="@string/radio_dialog"/>
			<Button android:id="@+id/checkboxs_dialog_btn" android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:text="@string/checkbox_dialog"/>
			<Button android:id="@+id/list_dialog_btn" android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:text="@string/list_dialog"/>
			<Button android:id="@+id/custome_dialog_btn" android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:text="@string/custome_dialog"/>
			<Button android:id="@+id/progress_dialog_btn" android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:text="@string/progress_dialog"/>
			<Button android:id="@+id/time_dialog_btn" android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:text="@string/time_dialog"/>
			<Button android:id="@+id/date_dialog_btn" android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:text="@string/date_dialog"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>