<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"  
    xmlns:tools="http://schemas.android.com/tools"  
    android:layout_width="match_parent"  
    android:layout_height="match_parent"  
    android:orientation="vertical"  android:background="@drawable/bg_red"
    tools:context=".sample.thirdparty.FacebookActivity" >  
  
    <com.facebook.widget.LoginButton  
        android:id="@+id/login_button"  
        android:layout_width="wrap_content"  
        android:layout_height="wrap_content"  
        android:layout_gravity="center_horizontal"  
        android:layout_marginBottom="30dp"  
        android:layout_marginTop="30dp" />  
        
    <Button  
        android:id="@+id/queryButton"  
        android:layout_width="match_parent"  
        android:layout_height="wrap_content"  
        android:layout_marginTop="30dp"  
        android:gravity="center"  
        android:text="@string/query"  
        android:textStyle="bold"  
        android:visibility="invisible" />  
  
    <Button  
        android:id="@+id/multiQueryButton"  
        android:layout_width="match_parent"  
        android:layout_height="wrap_content"  
        android:layout_marginTop="30dp"  
        android:gravity="center"  
        android:text="@string/multiQuery"  
        android:textStyle="bold"  
        android:visibility="invisible" />
    
    <ImageView android:id="@+id/photo_iv" android:layout_marginLeft="10dp" android:layout_marginRight="10dp" android:layout_marginTop="10dp"
			    	android:layout_height="100dp" android:layout_width="wrap_content"  android:contentDescription="@string/empty"/>
    
    <TextView android:id="@+id/profile_tv" android:layout_height="wrap_content" android:layout_width="match_parent"
		android:text="@string/empty"  android:textColor="@color/white" android:textStyle="bold" android:textSize="16sp"
		android:layout_marginTop="10dp" android:layout_marginRight="10dp" android:layout_marginLeft="10dp" android:layout_marginBottom="10dp"/>
    
</LinearLayout>